# splitly-spreetail

./: .gitignore  AI_CONTEXT.md  DECISIONS.md  README.md  SCOPE.md
backend/: .env.example  pyproject.toml  railway.json
backend/alembic/: env.py
backend/alembic/versions/: 53a5b775bebb_add_is_deleted_to_expenses.py  e12553742ff4_create_all_tables.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/core/: dependencies.py  email.py  fx.py  security.py
backend/app/models/: __init__.py  expense.py  expense_split.py  group.py  group_member.py  import_report.py  import_report_item.py  invitation.py  settlement.py  user.py
backend/app/repositories/: expense_repo.py  group_repo.py  import_repo.py  invitation_repo.py  member_repo.py  settlement_repo.py  user_repo.py
backend/app/routers/: auth.py  expenses.py  groups.py  imports.py  invitations.py  reports.py  settlements.py  users.py
backend/app/schemas/: auth.py  balance.py  expense.py  group.py  import_schema.py  invitation.py  member.py  report.py  settlement.py  user.py
backend/app/services/: auth_service.py  balance_service.py  expense_service.py  group_service.py  import_service.py  invitation_service.py  report_service.py  settlement_service.py
backend/scripts/: seed_demo.py
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  balances.ts  client.ts  csvImport.ts  expenses.ts  groups.ts  index.ts  reports.ts  settlements.ts  types.ts
frontend/src/components/: Header.tsx  SidebarLeft.tsx  SidebarRight.tsx
(+16 files in other folders)
