[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "resend>=2.30.1",
    "scalar-fastapi>=1.8.2",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.49.0",
]
